--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="AI-powered plastic waste detection and classification" />
     <meta name="author" content="" />
 
-    <meta property="og:title" content="PlasticDetect AI" />
+    <meta property="og:title" content="GreenLens AI" />
     <meta property="og:description" content="AI-powered plastic waste detection and classification" />
     <meta property="og:type" content="" />
     <meta property="og:image" content="" />
